Bug Fix:Aligned the succes and error message

--- a/css/default.css
+++ b/css/default.css
@@ -35,6 +35,9 @@ button{
 	border:0;
 }
 /*Error and Succes Message*/
+.message-align{
+	margin-left: 18%;
+}
 .errorMessage{
 	color: #FA3E3E;
 	text-align: center;
